[package]
name = "andromeda-app-contract"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "1.1.8" }
cosmwasm-schema = "1.1.8"
cw-storage-plus = "1.0.0"
cw2 = "1.0.0"
schemars = "0.8.11"
serde = { version = "1.0.148", default-features = false, features = ["derive"] }
semver = "1"
andromeda-automation = { version = "0.1.0", path = "../../../packages/andromeda-automation" }
andromeda-app = { version = "0.1.0", path = "../../../packages/andromeda-app" }
ado-base = { path = "../../../packages/ado-base", version = "0.1.0", features=["instantiate"] }
common = { version = "0.1.0", path = "../../../packages/common" }
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cw-multi-test = { version = "0.16.0", optional = true }

[dev-dependencies]
andromeda-testing = { version = "0.1.0", path = "../../../packages/andromeda-testing" }
prost = "0.9"

[features]
testing = ["cw-multi-test"]