[package]
name = "andromeda-primitive"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "1.1.8"
getrandom = { version = "0.2", features = ["js"] }
cosmwasm-schema = "1.1.8"
cw-storage-plus = "1.0.0"
cw2 = "1.0.0"
schemars = "0.8.11"
serde = { version = "1.0.148", default-features = false, features = ["derive"] }
semver = "1"
cw-utils = "1.0.0"

andromeda-data-storage = { version = "0.1.0", path = "../../../packages/andromeda-data-storage" }
ado-base = { path = "../../../packages/ado-base", version = "0.1.0" }
common = { version = "0.1.0", path = "../../../packages/common" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cw-multi-test = { version = "0.16.1", optional = true }

[features]
testing = ["cw-multi-test"]

