[package]
name = "andromeda-astroport"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "1.1.8"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0.148", default-features = false, features = ["derive"] }
schemars = "0.8.11"
cw-storage-plus = "1.0.0"
cw20 = "1.0.0"
cw2 = "1.0.0"
astroport = "1.0.1"
cw-asset = { version = "1.0.2", features = ["legacy"] }

andromeda-ecosystem = { version = "0.1.0", path = "../../../packages/andromeda-ecosystem" }
common = { version = "0.1.0", path = "../../../packages/common" }
ado-base = { path = "../../../packages/ado-base", version = "0.1.0", features = ["primitive", "withdraw"] }

[dev-dependencies]
terra-cosmwasm = { version = "2.2.0" }
cosmwasm-schema = "0.16.0"
