[package]
name = "andromeda-weighted-distribution-splitter"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "1.1.8"
cosmwasm-schema = "1.1.8"
serde = { version = "1.0.148", default-features = false, features = ["derive"] }
schemars = "0.8.11"
cw-storage-plus = "1.0.0"
cw2 = "1.0.0"
cw-utils = "1.0.0"
semver = "1"

andromeda-finance = { version = "0.1.0", path = "../../../packages/andromeda-finance" }
ado-base = { path = "../../../packages/ado-base", version = "0.1.0", features = ["modules"] }
common = { version = "0.1.0", path = "../../../packages/common" }

[dev-dependencies]

andromeda-testing = { version = "0.1.0", path = "../../../packages/andromeda-testing" }
