[package]
name = "andromeda-cw721-timelock"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "1.1.8"
cosmwasm-schema = "1.1.8"
serde = { version = "1.0.148", default-features = false, features = ["derive"] }
schemars = "0.8.11"
cw-storage-plus = "1.0.0"
cw721 = "0.16.0"
cw2 = "1.0.0"
semver = "1"
cw-utils ="1.0.0"


andromeda-non-fungible-tokens = { version = "0.1.0", path = "../../../packages/andromeda-non-fungible-tokens" }
common = { version = "0.1.0", path = "../../../packages/common" }
ado-base = { path = "../../../packages/ado-base", version = "0.1.0"}

