[package]
name = "andromeda-gumball"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "1.1.8"
cosmwasm-schema = "1.1.8"
cw-storage-plus = "1.0.0"
schemars = "0.8.11"
serde = { version = "1.0.148", default-features = false, features = ["derive"] }
cw-utils = "1.0.0"
cw721 = "0.16.0"
cw2 = "1.0.0"
base64 = "0.13.0"
#terrand = { version = "3.2.2", features = ["library"] }
semver = "1"

andromeda-non-fungible-tokens = { version = "0.1.0", path = "../../../packages/andromeda-non-fungible-tokens" }
common = { version = "0.1.0", path = "../../../packages/common" }
ado-base = { path = "../../../packages/ado-base", version = "0.1.0" }

